# novel

./: Cargo.toml
.cargo/: config.toml
src/: assets.rs  background.rs  callback.rs  main.rs  ui.rs  util.rs
src/menu/: main_menu.rs
src/ui/: layer.rs  layer_stack.rs  main_menu.rs
src/util/: take_while_incl.rs
