[package]
name = "novel"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.11.3", features = [] }
bevy_egui = "0.22.0"

[dev-dependencies.bevy]
version = "*"
features = ["dynamic_linking"]
