[package]
name = "novel"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.12.0", features = [] }
bevy_asset_loader = "0.18.0"
bevy_egui = "0.23.0"
itertools = "0.11.0"

[dev-dependencies.bevy]
version = "*"
features = ["dynamic_linking"]
